The idea is to record here changes that deserve mentioning in
the release notes, as we make them, to make the release process easier.

Next version:

2.2 (2012-??-??)

* add support for PDF documents encrypted with Acrobat X
* “Print as image” compatibility option for documents that fail to print properly
* -manga-mode [1|true|0|false] for proper display of manga comic books
* fix multiple crashes caused by overflows

2.1.1 (2012-05-07)

* fix a couple of crashes, most importantly crash when resizing some ePub files

2.1 (2012-05-03)

* support for EPUB ebook format
* added menu item to rename a file (contributed by Vasily Fomin)
* support multi-page TIFF files
* support TGA images
* support for some comic book (CBZ) metadata
* support JPEG XR images (available on Windows Vista or later,
  for Windows XP the Windows Imaging Component has to be installed)
* fixed multiple heap overflows reported by John Leitch from
  Microsoft Vulnerability Research (MSVR) and by Carlo Di Dato (aka shinnai)
* the installer is now signed

2.0.1 (2012-04-08)

* fix loading .mobi files from command line
* fix a crash loading multiple .mobi files at once
* fix a crash showing tooltips for table of contents tree entries

2.0 (2012-04-02)

* support for mobi ebook format
* we can now open CHM documents from network drives
* images from documents can be copied from the context menu
* document colors can be replaced with Windows system colors
  (option hidden if Windows displays text black-on-white)
* smaller size thanks to ucrt

1.9 (2011-11-23)

* CHM documents support
* support touch gestures (available on Windows 7 or later)
  (contributed by Robert Prouse)
* open linked audio and video files in an external media player
* improved support for PDF transparency groups

1.8 (2011-09-18)

* improved support for PDF form text fields
* various minor improvements and crash fixes
* speedup handling some djvu files

1.7 (2011-07-18)

* favorites